product_docs/docs/pgd/6.2/rel_notes/pgd_6.1.0_rel_notes.mdx
---
# IMPORTANT: Do not edit this file directly - it is generated from yaml source.
title: EDB Postgres Distributed 6.1.0 release notes
navTitle: Version 6.1.0
originalFilePath: product_docs/docs/pgd/6.2/rel_notes/src/relnote_6.1.0.yml
editTarget: originalFilePath
---

Released: 19 August 2025

This is a minor release of PGD 6, which introduces direct upgrade support from PGD 4.4.0+ and PGD 5.9.0+. This makes it the first version of PGD 6 that allows for a seamless, in-place upgrade from older versions. In addition to this key feature, PGD 6.1.0 also includes a variety of new features, enhancements, and important bug fixes.

## Highlights

- **Seamless upgrades from PGD 4 and PGD 5 to PGD 6**: PGD 4.4.0+ and PGD 5.9.0+ users can now perform a direct upgrade to PGD 6, beginning with PGD 6.1.0, ensuring a smooth transition to the latest features.
- **Replication to Apache Iceberg**: PGD now supports replication to Apache Iceberg when using the Analytics Accelerator. This new capability allows you to stream data directly from your PGD cluster to an Iceberg data lake and also query the Iceberg data directly from within PGD. This significantly expands your options for large-scale data analytics and integration.
- **PGD 6 now supports Materialized Views**:  The  CREATE, ALTER, REFRESH, and DROP commands are replicated across the cluster, ensuring that materialized views are consistent on all nodes. When a materialized view is created or concurrently refreshed, the data is populated on the upstream node and then replicated to others, providing full support for this functionality.
- **PGD 6 is now on IBM LinuxONE**: PGD's native capabilities are expanded with new support for IBM LinuxONE, offering optimized uptime, throughput, and energy efficiency.

## Features

<table class="table w-100"><thead><tr><th>Description</th><th width="10%">Addresses</th></tr></thead><tbody>
<tr><td><details><summary>Added CLI commands to get and update Postgres settings (GUC).</summary><hr/><p>Add the <code>pgd node get-config</code> and <code>pgd node set-config</code> commands to allow users to retrieve and modify Postgres settings (GUC) via the CLI.</p>
</details></td><td></td></tr>
<tr><td><details><summary>New <code>drop_after_retention_period</code> argument added to the <code>bdr.autopartition</code> function</summary><hr/><p><code>bdr.autopartition()</code> now takes an additional boolean argument <code>drop_after_retention_period</code> which can be set to false if the user does not want the partition to be dropped, but only detached.</p>
</details></td><td>82332</td></tr>
<tr><td><details><summary>Simplified Node Configuration with the PGD CLI</summary><hr/><p>The pgd command-line tool now includes new commands to make managing individual node configurations easier. You can now use <code>pgd node &lt;node-name&gt; get-config</code> and <code>pgd node &lt;node-name&gt; set-config</code> to retrieve and update specific Postgres settings (GUCs) for any node in your cluster directly from the CLI.</p>
</details></td><td></td></tr>
<tr><td><details><summary>PGD CLI View Commit Scopes</summary><hr/><p>The PGD CLI now includes a new command, <code>pgd commit-scopes list</code>, that allows you to view the commit scope configuration for your cluster. This command provides details on all commit scopes, including their rules and the groups they apply to, which improves the visibility and management of your data consistency settings.</p>
</details></td><td></td></tr>
<tr><td><details><summary>PGD CLI -  Part a Node from a Cluster</summary><hr/><p>The PGD CLI now includes a new command, <code>pgd node part</code>, which provides a streamlined way to remove a node from an active cluster. This command automates the process of calling the <code>node_part</code> SQL function and reports on its progress, simplifying node management directly from the command line.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Leader DDL Lock</summary><hr/><p>New lock type leader DDL lock is used by default for locking DDL statements. This lock locks on write-leaders only, not requiring majority nodes to participate in the locking operation. Old behavior can be restored by adjusting <code>bdr.ddl_locking</code> configuration parameter.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Replication of Roles to witness nodes</summary><hr/><p>Roles are now replicated to witness nodes when they join the nodegroup, and also as and when they are created or altered on data nodes. This is useful mainly when dealing with GUC permissions.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Added command to list commit scopes for PGD cluster.</summary><hr/><p>Add a command <code>pgd commit-scopes list</code> to list commit scopes information for PGD cluster.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Added command to part a PGD node from cluster.</summary><hr/><p>Add a command <code>pgd node part</code> to part a PGD node from cluster.</p>
</details></td><td></td></tr>
</tbody></table>


## Enhancements

<table class="table w-100"><thead><tr><th>Description</th><th width="10%">Addresses</th></tr></thead><tbody>
<tr><td><details><summary>Update the <code>pgd group get-option</code> and <code>pgd group show</code> commands to show default values.</summary><hr/><p>The <code>pgd group get-option</code> and <code>pgd group show</code> commands will now display the default values for all options.
The <code>pgd group show</code> command will display the source of the option values as well.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Apply the PGD Essential constraints for CLI commands.</summary><hr/><p>The CLI will check for and enforce the PGD Essential constraints for the commands as applicable.
See <a href="https://www.enterprisedb.com/docs/pgd/latest/essential-how-to/pgd-cli/#pgd-essential-constraints">PGD Essential CLI Constraints</a> for more details.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Improve Raft snapshot export/import to reset Raft completely</summary><hr/><p>We've made improvements to how our Raft consensus mechanism handles snapshots. This ensures that in the rare event of a data consistency issue, restoring a snapshot will now fully reset the system's state, allowing operations to resume smoothly from a consistent starting point.</p>
</details></td><td></td></tr>
<tr><td><details><summary>EPAS Interval Partition Support for PGD</summary><hr/><p>A new enhancement allows partitions created by EDB Postgres Advanced Server (EPAS) AutoPartition to work correctly within a multi-node PGD environment. This fix ensures partitions are created consistently on each node and are visible across all nodes.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Improved max_connections Error Reporting</summary><hr/><p>The Connection Manager now provides more helpful and specific error messages when a max_connections limit is reached. Users will now see a clear message like &quot;sorry, too many clients already,&quot; making it much easier to diagnose connection issues.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Support for commands that generate Table Rewrites in an explicit transaction block</summary><hr/><p>PGD now supports executing ALTER TABLE commands that generate a table rewrite within a transaction block. Multiple commands are supported in a single transaction block. This simplifies complex DDL operations by applying all changes as a single atomic unit and provides performance optimizations when multiple commands target the same table.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Postgres Compatibility with PGD - Phase 5</summary><hr/><p>This is a placeholder for future updates regarding Postgres compatibility.</p>
</details></td><td></td></tr>
</tbody></table>


## Changes

<table class="table w-100"><thead><tr><th>Description</th><th width="10%">Addresses</th></tr></thead><tbody>
<tr><td><details><summary>Removal of listen_address Group Option</summary><hr/><p>The <code>listen_address</code> option has been removed from <code>pgd group set-option</code> to simplify configuration. The Connection Manager will now use the value from the <code>listen_addresses</code> GUC directly, resolving issues with setting hostnames or multiple addresses that were previously unsupported.</p>
</details></td><td></td></tr>
</tbody></table>


## Bug Fixes

<table class="table w-100"><thead><tr><th>Description</th><th width="10%">Addresses</th></tr></thead><tbody>
<tr><td><details><summary>Fix the <code>pgd cluster verify</code> command warning for <code>witness-only</code> group.</summary><hr/><p>The <code>pgd cluster verify</code> command displayed warning for <code>Data nodes per group</code> check for <code>witness-only</code> group.
The check is not applicable for <code>witness-only</code> groups and hence the status <code>Ok</code> will be displayed.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Fix the data dir check for the setup command.</summary><hr/><p>The <code>pgd node setup</code> command checks for the presence of <code>PG_VERSION</code> file in the given data dir option.
However the code incorrectly uses the <code>bindir</code> option instead of <code>pgdata</code>.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Fix for Mixed_version Clusters</summary><hr/><p>We've resolved a bug that could cause replication to fail in a mixed-version PGD cluster (e.g., combining Postgres 12 and Postgres 16), an architecture used temporarily during postgres rolling upgrade. Previously, DDL statements on a newer node could lead to replication slot disconnection on older nodes, with an &quot;unrecognized configuration parameter&quot; error. This fix ensures that replication now functions correctly during a rolling upgrade or in a temporary mixed-version state.</p>
</details></td><td>46373</td></tr>
<tr><td><details><summary>Connection Manager Behavior on Routing Changes</summary><hr/><p>The Connection Manager now correctly handles connections following a change in cluster routing configuration (e.g., switching between global and no routing). This resolves unexpected behavior and ensures client connections are routed as intended after a configuration update.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Fix for node_pkey Errors When Rebuilding Parted Nodes</summary><hr/><p>A fix has been added to address a bug that could cause a consensus worker to crash with a duplicate key value violates unique constraint &quot;node_pkey&quot; error when a parted node was being rebuilt. This fix ensures that you can now successfully rebuild a parted node using <code>bdr_init_physical</code> without encountering this issue.</p>
</details></td><td>44467, 45084</td></tr>
<tr><td><details><summary>PGD CLI cluster verify Command Fix for Witness-Only Groups</summary><hr/><p>The pgd cluster verify command no longer displays a warning for witness-only groups that do not contain data nodes. This resolves an issue where the command incorrectly flagged these groups, ensuring that the verification output is now accurate for all cluster types.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Raft Fix for Parting Lagging Nodes</summary><hr/><p>Raft no longer fails to recover after a heavily-lagging node that was previously a leader is parted from the cluster. This fixes a bug where the Raft leader could crash with a &quot;BDR node XXX not found&quot; error, which previously required a manual, forceful reset of the Raft state. Now, Raft correctly handles this scenario and recovers automatically, ensuring cluster stability.</p>
</details></td><td>50099</td></tr>
<tr><td><details><summary>Fix for PGD CLI Multi-Group Setup</summary><hr/><p>A bug has been fixed in the PGD CLI setup command that prevented the creation of multi-group clusters. Previously, the command would fail with an unhelpful error when attempting to add a node to a second group. The fix ensures that the command now correctly handles the creation of nodes in new groups, allowing for successful multi-group cluster setup.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Fix for CLI setup Command GUC Update</summary><hr/><p>The PGD CLI setup command no longer fails when attempting to update Postgres settings on remote nodes. This fix resolves a &quot;malformed array literal&quot; error that occurred during the cluster setup, improving the reliability of the initialization process.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Fix for &quot;Clock Has Moved Backwards&quot; Error with Snowflake Sequences</summary><hr/><p>A race condition has been fixed that could cause a &quot;clock has moved backwards&quot; error when using Snowflake sequences, even when the system clock was functioning correctly. This fix ensures the sequence correctly handles concurrent access, preventing this error and improving the reliability of Snowflake sequence generation.</p>
</details></td><td>49376, 43659</td></tr>
<tr><td><details><summary>Fix a crash with pg_failover_slots</summary><hr/><p>Ensure that CDC hooks are no-op when recovery is in progress or the backend is not connected to a database. This can definitely happen if <code>pg_failover_slots</code> is active.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Fix a crash on a stat view for connection manager stat</summary><hr/><p>The view <code>bdr.stat_connection_manager_hba_file_rules</code> had some parsing issues on the <code>pg_hba.conf</code> file specifically in the <code>Address/Mask</code> column for the &quot;all&quot; value.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Node kind check</summary><hr/><p>PGD CLI now has a verify check for nodes not having a node kind properly set. This check emits a warning on nodes that are coming from a previous major version upgrade that missed setting the node kind.</p>
</details></td><td></td></tr>
<tr><td><details><summary>Skip the node GUCs update with <code>pgd node setup</code> command.</summary><hr/><p>The <code>pgd node setup</code> verifies the Postgres settings while setting up a PGD node.
The command will now skip the node GUCs update as the <code>bdr_superuser</code> role, used by CLI is not allowed to run ALTER SYSTEM queries.
The command will continue to verify the Postgres settings and will display a warning message if any of the settings require modification.</p>
</details></td><td></td></tr>
</tbody></table>


